ggplot2 0.8  (2008-XX)
----------------------------------------

* stat_contour now has arguments to control the position of the contours, rather than relying on the z scale
* scale_z_* now removed because no longer used by anything
* coord_cartesian now correctly clips instead of dropping points outside of its limits
* order aesthetic should now work with bars (and in general more geoms)
* scale_discrete_position: fixed bug when limits were set
* xlim, ylim and zlim now generate a reverse scale if the minimum is greater than the maximum
* grid: correctly expose subcomponents of strips and axes
* ggsave now produces postscript files that are actually suitable for embedding in another document
* ggsave now checks that you are using it with a ggplot plot
* ggsave now recognises the .svg extension and will produce svg files
* theme_grey now aliased to theme_gray
* geom_smooth calls stat::predict explicit to avoid conflicts with packages that override predict for S4 model classes
* geom_path and geom_line gain arrows argument to match geom_segment
* geom_point, geom_pointrange and geom_boxplot: now use shape = 16 instead of 19.  This shape does not have a border from R 2.8 on, and so will look better when displayed transparently.
* xlim and ylim now produce discrete scales when appropriate
* geom_bar, geom_polygon, geom_rect, ...: default fill colour is now much closer to black to match the defaults in other geoms (point, line, etc)
* facet_grid: margins now grouped correctly in default case (non-aesthetic variables ignored when generating default group value)
* theme_bw: tweaks to make black and white theme look a little nicer
* theme_line: setting size works correctly
* theme_rect, theme_segment: size now measured in mm, to be consistent with the rest of ggplot
* theme: panel.empty setting removed as it is no longer used
* theme: new theme setting panel.margin (a unit) controls gap between panels in facetted plots (for both grid and wrap)