@@ -1,6 +1,7 @@
 ggplot2 0.8  (2008-XX)
 ----------------------------------------
 
+* scale_x_log10, scale_y_sqrt etc now correctly transform output from statistics as well as raw data
 * stat_contour now has arguments to control the position of the contours, rather than relying on the z scale
 * scale_z_* now removed because no longer used by anything
 * coord_cartesian now correctly clips instead of dropping points outside of its limits
